[package]
name = "llama-cpp-sys-3"
version = "0.5.10"
edition = "2021"
description = "llama.cpp bindings"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cmake = "0.1"
bindgen = "0.64.0"

[dev-dependencies]
rand = "0.8.5"

[features]
cuda = []
cuda_f16 = ["cuda"]
native = []
# TODO(mdegans): vulkan, kompute, clblast, mpi, CUDA on Windows, etc.
